# onix-examples

./: .gitignore  README.md  onix.nix
bugs-unpack-2023-04-20/: default.nix  example.opam  onix-lock.json
custom-compiler/: custom-compiler.opam  default.nix  onix-lock.nix
dep-vars/: default.nix  example.opam  onix-lock.json
depexts-postgresql/: Makefile  default.nix  dune  example.opam  onix-lock.json
flakes/: README.md  dune
hello/: default.nix  hello.opam  onix-lock.json  onix-lock.nix
hello-nix-compiler/: default.nix  hello-nix-compiler.opam  onix-lock.json  onix-lock.nix
hello-nix-compiler-flakes/: dune  flake.nix  hello-nix-compiler-flakes.opam  onix-lock.json
hello-nix-compiler/nix/: onix-remote.nix
hello-ocaml-5/: README.md  default.nix  dune  example.opam  hello-ocaml-5.opam  hello.ml  onix-lock.json
hello-ocaml-variants/: default.nix  dune  onix-lock.json  onix-lock.nix
hello-opam-compiler/: default.nix  onix-lock.json
hello-with-dep-flags/: default.nix  hello-with-dep-flags.opam
hello-with-dep-vars/: default.nix  onix-lock.json
hello-with-overlay/: default.nix
hello-with-overrides/: default.nix  hello-with-overrides.opam  onix-lock.json  onix-lock.nix
hello-with-overrides/nix/: onix.nix
hello-with-test-doc-tools/: default.nix  onix-lock.nix
multiple-repositories/: README.md  default.nix  dune  multiple-repositories.opam  onix-lock.json
ocaml-5/: README.md  default.nix  dune  example.ml  example.opam  onix-lock.json
ocaml-base-compiler/: default.nix  example.opam  onix-lock.json
ocaml-system-compiler/: default.nix  example.opam  onix-lock.json
ocaml-variants/: README.md  default.nix  dune  onix-lock.json  onix-lock.nix
opam-packages/: Main.ml  dune  lock-all.sh
opam-packages/_output/0install-solver.2.17/: default.nix  onix-lock.nix
opam-packages/_output/ANSITerminal.0.8.4/: onix-lock.nix
opam-packages/_output/BetterErrors.0.0.1/: onix-lock.nix
opam-packages/_output/DAGaml.0.02/: onix-lock.nix
opam-packages/_output/FPauth-core.1.0.0/: onix-lock.nix
opam-packages/_output/FrontC.4.1.0/: onix-lock.nix
opam-packages/_output/GT.0.5.1/: onix-lock.nix
opam-packages/_output/ISO8601.0.2.6/: onix-lock.nix
opam-packages/_output/KaSim.4.0.0/: onix-lock.nix
opam-packages/_output/OCanren.0.3.0~alpha1/: onix-lock.nix
opam-packages/_output/aacplus.0.2.2/: onix-lock.nix
opam-packages/_output/abella.2.0.7/: onix-lock.nix
opam-packages/_output/absolute.0.1/: onix-lock.nix
opam-packages/_output/abstract_algebra.v0.15.0/: onix-lock.nix
opam-packages/_output/accessor_async.v0.15.0/: onix-lock.nix
opam-packages/_output/accessor_core.v0.15.0/: onix-lock.nix
opam-packages/_output/advi.2.0.0/: onix-lock.nix
opam-packages/_output/aez.0.3/: onix-lock.nix
opam-packages/_output/afl.2.52b/: onix-lock.nix
opam-packages/_output/aifad.2.3.0/: onix-lock.nix
opam-packages/_output/aio.0.0.3/: onix-lock.nix
opam-packages/_output/albatross.1.5.0/: onix-lock.nix
opam-packages/_output/alcotest-async.1.5.0/: onix-lock.nix
opam-packages/_output/alcotest-js.1.5.0/: onix-lock.nix
opam-packages/_output/alcotest-lwt.1.5.0/: onix-lock.nix
opam-packages/_output/alcotest-mirage.1.5.0/: onix-lock.nix
opam-packages/_output/alcotest.1.5.0/: onix-lock.nix
opam-packages/_output/alg_structs.0.1.3/: onix-lock.nix
opam-packages/_output/alg_structs_qcheck.0.1.3/: onix-lock.nix
opam-packages/_output/aliases.0.0.5/: onix-lock.nix
opam-packages/_output/alonzo.0.4.0/: onix-lock.nix
opam-packages/_output/alt-ergo-lib.2.4.1/: onix-lock.nix
opam-packages/_output/alt-ergo-parsers.2.4.1/: onix-lock.nix
opam-packages/_output/alt-ergo.2.4.1/: onix-lock.nix
opam-packages/_output/amqp-client-lwt.2.2.2/: onix-lock.nix
opam-packages/_output/ancient.0.9.1/: onix-lock.nix
opam-packages/_output/anders.1.1.1/: onix-lock.nix
opam-packages/_output/angstrom-async.0.9.0/: onix-lock.nix
opam-packages/_output/angstrom-unix.0.9.0/: onix-lock.nix
opam-packages/_output/anycache-lwt.0.7.4/: onix-lock.nix
opam-packages/_output/archsat.1.1/: onix-lock.nix
opamverse/: onix.nix
overlay/: .gitignore  default.nix  example.opam  onix-lock.json
pin-depends/: default.nix  example.opam  onix-lock.json
pin-depends-opam-lock/: default.nix  example.opam  example.opam.locked  onix-lock.json  with-pin-depends-opam-lock.opam.locked
universe/: default.nix  onix-lock.json  onix-lock.nix  universe.opam
use-nix-gen/: example.opam
use-nix-gen/onix.lock/: default.nix
use-vendored-dep/: README.md  default.nix  dune  example.ml  onix-lock.json  use-vendored-dep.opam
vendored-dep/: README.md  default.nix  example.opam  onix-lock.json
with-depexts-postgresql/: Main.ml  default.nix  onix-lock.json  onix-lock.nix  with-depexts-postgresql.opam
with-pin-depends/: default.nix  onix-lock.json  onix-lock.nix  with-pin-depends.opam
with-pin-depends-opam-lock/: default.nix  dune  onix-lock.json  with-pin-depends-opam-lock.opam  with-pin-depends-opam-lock.opam.locked
(+3134 files in other folders)
