opam-version: "2.0"
maintainer: ["Rizo I. <rizo@odis.io>"]
license: "ISC"
homepage: "https://github.com/odis-labs/onix"
bug-reports: "https://github.com/odis-labs/onix/issues"
dev-repo: "git+https://github.com/odis-labs/onix.git"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "5.00" & < "6.00"}
  "dune" {build}
  "fmt"
  "eio"
  "eio_main"
  "eio_luv"
]
pin-depends: [
  "eio.dev" "git+https://github.com/ocaml-multicore/eio#fd3333678645bc593557f21fa9f555a1e010a845"
  "eio_luv.dev" "git+https://github.com/ocaml-multicore/eio#fd3333678645bc593557f21fa9f555a1e010a845"
  "eio_main.dev" "git+https://github.com/ocaml-multicore/eio#fd3333678645bc593557f21fa9f555a1e010a845"
]