opam-version: "2.0"
maintainer: ["Rizo I. <rizo@odis.io>"]
license: "ISC"
homepage: "https://github.com/rizo/onix"
bug-reports: "https://github.com/rizo/onix/issues"
dev-repo: "git+https://github.com/rizo/onix.git"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml"
  "dune" {>= "2.0" & build}
  "fmt"
  "odoc" {with-doc}
  "ocamlformat" {with-tools}
  "ocaml-lsp-server" {with-tools}
]
